# STR-22-01-esphome_garagedoor_controller

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
kicad_pcb/: STR-22-01-esphome_garagedoor_controller.kicad_pcb  STR-22-01-esphome_garagedoor_controller.sch
